# facebook_monitor_py

./: .gitattributes  .gitignore  AGENTS.md  GIT_COMMIT_RULES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ENGINEERING_REVIEW.md  HANDOFF.md  PHASE0_SPIKE.md  README.md  REFERENCE_MAP.md  SECRET_STORAGE.md  TASK_BREAKDOWN.md  UPDATER_PLAN.md  USAGE.md  WEB_UI_CONTRACT.md  facebook_python_migration_plan.md  frontend-vendor.md  maintainability_annotations.json  tooling.md
docs/archive/: PHASE0_SPIKE.md  facebook_python_migration_plan.md  ui_refactor_phase9_10_review.md  ui_refactor_plan.md
docs/ui_refactor/: reference_ui.html
packaging/: MACOS_HANDOFF.md  README.md
packaging/assets/: README.md
packaging/pyinstaller/: facebook_monitor.spec  facebook_monitor_macos.spec  version_info.txt
reference/: README.md
reference/docs/: ARCHITECTURE_PLAN.md  TASK_BREAKDOWN.md  USAGE.md
reference/scripts/: smoke_check_userscript.js
reference/src/: facebook_group_refresh.user.js
scripts/: phase0_extractors.py  phase0_notifications.py  phase0_setup_login.py  phase0_worker_probe.py  phase_b_capture_group_posts.py  phase_b_console.py  phase_b_manage_targets.py  phase_b_webui.py  phase_b_worker_once.py  phase_c_resident_worker.py  phase_c_scheduler.py  uv.ps1
scripts/admin/: _release_build.py  build_macos_release.py  build_windows_release.py  check_database_invariants.py  check_frontend_vendor_manifest.py  check_static_js_syntax.py  complexity_report.py  complexity_report_annotations.py  complexity_report_collect.py  complexity_report_models.py  complexity_report_rankings.py  complexity_report_renderers.py  console.py  create_macos_app_launcher.py  create_release_manifest.py  create_release_zip.py  finalize_release_manifest.py  manage_targets.py  release_artifact_validation.py  release_validation.py  sign_release_manifest.py  smoke_frozen_updater.py  smoke_relogin_flow.py  (+1 more)
tests/: __init__.py  test_profile_login.py
(+704 files in other folders)
