[project]
name = "facebook-monitor-py"
version = "0.0.0"
description = "Phase 0 spike for a Python + Playwright Facebook group monitor."
requires-python = ">=3.13,<3.14"
dependencies = [
  "playwright>=1.44",
  "httpx>=0.27",
  "fastapi>=0.136.1",
  "uvicorn>=0.46.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.27",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
